--- a/contact_us.html
+++ b/contact_us.html
@@ -141,6 +141,7 @@
                         </div>
                         <p class="info-item tel">联系电话：400-6666-321，021-51688986</p>
                         <p class="info-item email">联系邮箱：service@egiraffe.com.cn</p>
+                        <p class="info-item wexin">微信：klwind1994</p>
                     </div>
                 </div>
                 <div class="copyright">
