--- a/contact_us.html
+++ b/contact_us.html
@@ -97,7 +97,7 @@
     </div>
     <div class="main contact_main">
         <div class="w1200 info-container clearfix">
-            <h3 class="title">长颈鹿English Online</h3>
+            <h3 class="title">联系我们</h3>
             <p class="subtitle special-font">CONTACT US</p>
             <div class="contact-info clearfix special-font">
                 <div class="left-info">
