--- a/course_essence.html
+++ b/course_essence.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/course.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <!-- <link rel="stylesheet" href="css/hover-min.css"> -->
     <script src="js/jquery.js"></script>
     <script src="js/swiper.min.js"></script>
@@ -121,50 +122,55 @@
                         <div class="tab tab-cur" style="margin-right: 0;">菁英少年英语</div>
                     </div>
                     <div class="tab-bd">
-                        <div class="tab-item clearfix special-font">
-                            <img src="img/img19.jpg" alt="">
-                            <div class="item">
-                                <span class="item-name">适合对象：</span><span class="item-value">3~4岁的学龄前小朋友</span>
-                            </div>
-                            <div class="item">
-                                <span class="item-name">主干教材：</span><span class="item-value">Hello Giraffe!
-                                    本系列教材共十册，每册课本配套2本手册，1张CD，另可搭配点读笔使用。</span>
-                            </div>
-                            <div class="item">
-                                <span class="item-name">课程规划：</span><span class="item-value">每月一册，共一年学程（依教学计划施行）</span>
-                            </div>
-                            <div class="item">
-                                <span class="item-name">教学特色：</span><span class="item-value">教材采用“主题式教学”及“螺旋式复习”的编排方式，以日常生活场景为设计主题，学习内容与生活相关；每三课紧跟一个复习单元，让小朋友轻松学习零负担。并且搭配点读笔、专属幼儿的GEO练习专区，让学习更有趣更有效。充分运用幼儿学习最有效的方式，搭配课堂游戏、活动及歌曲韵文的方式进行教学。</span>
-                            </div>
-                            <div class="item">
-                                <span class="item-name">学习成效：</span><br />
-                                <span class="item-subname">
-                                    Listening 听 / Speaking
-                                </span>
-                                <p class="desc">
-                                    说设计符合幼儿认知且生活化的主题式情境对话，并延伸教学主题，搭配充满节奏、律动的儿歌韵文，
-                                    让幼儿英语学习更活泼有趣！
-                                </p>
-                                <span class="item-subname m_t">
-                                    Reading 读 / Writing 写
-                                </span>
-                                <p class="desc">
-                                    透过手指临摹形状的方式来学习字母，强化对字母书写顺序、线条方向的概念，为书写做初步准备，同时教授字母音，让幼儿接受最基础的Phonics熏陶。每三节新课搭配一个复习课，进行螺旋式上升，让宝贝夯实基础，
-                                    学得更扎实。
-                                </p>
-                                <span class="item-subname m_t">
-                                    Giraffe English Online (在线练习)
-                                </span>
-                                <p class="desc">
-                                    亲子共读区－ABC学习区 / 幼儿游戏区 最爱游戏区－夹娃娃游戏 / Crazy Snail
-                                </p>
+                        <div class="swiper-container course-swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="tab-item clearfix special-font">
+                                        <img src="img/img19.jpg" alt="">
+                                        <div class="item">
+                                            <span class="item-name">适合对象：</span><span class="item-value">3~4岁的学龄前小朋友</span>
+                                        </div>
+                                        <div class="item">
+                                            <span class="item-name">主干教材：</span><span class="item-value">Hello Giraffe!
+                                                本系列教材共十册，每册课本配套2本手册，1张CD，另可搭配点读笔使用。</span>
+                                        </div>
+                                        <div class="item">
+                                            <span class="item-name">课程规划：</span><span class="item-value">每月一册，共一年学程（依教学计划施行）</span>
+                                        </div>
+                                        <div class="item">
+                                            <span class="item-name">教学特色：</span><span class="item-value">教材采用“主题式教学”及“螺旋式复习”的编排方式，以日常生活场景为设计主题，学习内容与生活相关；每三课紧跟一个复习单元，让小朋友轻松学习零负担。并且搭配点读笔、专属幼儿的GEO练习专区，让学习更有趣更有效。充分运用幼儿学习最有效的方式，搭配课堂游戏、活动及歌曲韵文的方式进行教学。</span>
+                                        </div>
+                                        <div class="item">
+                                            <span class="item-name">学习成效：</span><br />
+                                            <span class="item-subname">
+                                                Listening 听 / Speaking
+                                            </span>
+                                            <p class="desc">
+                                                说设计符合幼儿认知且生活化的主题式情境对话，并延伸教学主题，搭配充满节奏、律动的儿歌韵文，
+                                                让幼儿英语学习更活泼有趣！
+                                            </p>
+                                            <span class="item-subname m_t">
+                                                Reading 读 / Writing 写
+                                            </span>
+                                            <p class="desc">
+                                                透过手指临摹形状的方式来学习字母，强化对字母书写顺序、线条方向的概念，为书写做初步准备，同时教授字母音，让幼儿接受最基础的Phonics熏陶。每三节新课搭配一个复习课，进行螺旋式上升，让宝贝夯实基础，
+                                                学得更扎实。
+                                            </p>
+                                            <span class="item-subname m_t">
+                                                Giraffe English Online (在线练习)
+                                            </span>
+                                            <p class="desc">
+                                                亲子共读区－ABC学习区 / 幼儿游戏区 最爱游戏区－夹娃娃游戏 / Crazy Snail
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
     <div class="footer">
         <div class="w1200 content  special-font clearfix">
