--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <p class="subtitle">我们专注于3—12岁幼少儿英语培训教育</p>
                 <div class="column-content">
                     <ul class="kcList clearfix">
-                        <li class="kcItem special-font hvr-float-shadow">
+                        <li class="kcItem special-font hvr-float-shadow hvr-pulse-grow">
                             <h3 class="kcName">幼儿启蒙英语</h3>
                             <p class="kcClass">分为幼儿英语启蒙课程、幼儿英语会话课程、幼儿英语精英课程</p>
                             <p class="age item"><span class="key">适合年龄</span><span class="value">3-6岁幼儿</span></p>
@@ -208,7 +208,7 @@
                                     使用专业教学方法，培育出自信、快乐的孩子。</span>
                             </p>
                         </li>
-                        <li class="kcItem special-font hvr-float-shadow">
+                        <li class="kcItem special-font hvr-float-shadow hvr-pulse-grow">
                             <h3 class="kcName">儿童进阶英语</h3>
                             <p class="kcClass">分为自然拼读课程和儿童英语会话课程。</p>
                             <p class="age item"><span class="key">适合年龄</span><span class="value">6~8岁小学生</span></p>
@@ -218,7 +218,7 @@
                                     通过情境式主题对话、阅读真有趣和歌曲韵文等单元，让儿童觉得上课有趣又有效率。</span>
                             </p>
                         </li>
-                        <li class="kcItem special-font hvr-float-shadow">
+                        <li class="kcItem special-font hvr-float-shadow hvr-pulse-grow">
                             <h3 class="kcName">少儿强化英语</h3>
                             <p class="kcClass">分为幼儿英语启蒙课程、幼儿英语会话课程、幼儿英语精英课程</p>
                             <p class="age item"><span class="key">适合年龄</span><span class="value">3-6岁幼儿</span></p>
@@ -227,7 +227,7 @@
                                     神奇的记忆法训练，让学生牢记词汇、短语，通过归纳法总结，使语法融会贯通，成绩遥遥领先。</span>
                             </p>
                         </li>
-                        <li class="kcItem special-font hvr-float-shadow">
+                        <li class="kcItem special-font hvr-float-shadow hvr-pulse-grow">
                             <h3 class="kcName">菁英少年英语</h3>
                             <p class="kcClass">分为幼儿英语启蒙课程、幼儿英语会话课程、幼儿英语精英课程</p>
                             <p class="age item"><span class="key">适合年龄</span><span class="value">3-6岁幼儿</span></p>
@@ -237,21 +237,21 @@
                             </p>
                         </li>
                     </ul>
-                    <a href="#" class="btn-audition">预约试听课程</a>
+                    <!-- <a href="#" class="btn-audition">预约试听课程</a> -->
                 </div>
             </div>
         </div>
         <div class="column-wrapper">
             <div class="w1200 column column2">
                 <h3 class="title">学院简介</h3>
-                <p class="subtitle">上海徐汇区长劲鹿美语培训中心</p>
+                <p class="subtitle">上海徐汇区长颈鹿美语培训中心</p>
                 <div class="column-content">
                     <p class="intro special-font">
                         身处在竞争激烈的时代，语言是孩子面对未来竞争必备的工具，对于孩子的教育的投资，长颈鹿美语无不竭尽所能创造优质的学习平台。
                         我们从孩子的角度出发，秉持着‘好还要更好’的理念，以‘分龄分级制’的学习课程，多元化的学习内容，营造全英语的学习环境，
                         并透过各式活动开发潜能，培养菁英领袖素质，让他们自信地站上世界的舞台，未来成为国际化人才。
                     </p>
-                    <a href="#" class="btn-more">了解更多</a>
+                    <a href="about_us.html" class="btn-more">了解更多</a>
                 </div>
             </div>
         </div>
@@ -281,7 +281,7 @@
         <div class="column-wrapper">
             <div class="w1200 column column4">
                 <h3 class="title">师资保障</h3>
-                <p class="subtitle">上海徐汇区长颈鹿美语培训中心</p>
+                <p class="subtitle">一份教学的热忱，十分的努力与经营</p>
                 <div class="column-content">
                     <div class="swiper-container teacher-swiper" id="teacherSwiper">
                         <div class="swiper-wrapper">
@@ -331,7 +331,7 @@
                     <!-- Add Arrows -->
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
-                    <a class="btn-more">了解更多</a>
+                    <a href="about_us.html" class="btn-more">了解更多</a>
                 </div>
             </div>
         </div>
