--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/swiper.min.css">
-    <link rel="stylesheet" href="css/hover-min.css">
+    <link rel="stylesheet" href="css/hover.css">
+    <!-- <link rel="stylesheet" href="css/hover-min.css"> -->
     <script src="js/jquery.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/common.js"></script>
