--- a/course_essence.html
+++ b/course_essence.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>长颈鹿美语--开设课程-菁英少年英语</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -92,7 +92,7 @@
             </div>
         </div>
     </div>
-    <div class="banner">
+    <div class="banner banner-pic">
         <img src="img/banner10.jpg" alt="">
         <!-- <h3 class="title special-font">菁英少年英语</h3> -->
     </div>
