--- a/about_us.html
+++ b/about_us.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>长颈鹿美语--关于长颈鹿</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -94,7 +94,7 @@
             </div>
         </div>
     </div>
-    <div class="banner">
+    <div class="banner banner-pic">
         <img src="img/banner9.jpg" alt="">
         <!-- <h3 class="title special-font">长颈鹿美语</h3> -->
     </div>
