--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>长颈鹿美语--首页</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </div>
-        <div class="banner">
+        <div class="banner bannerSwiper">
             <div class="swiper-container" id="swiper1">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
