--- a/teach_diversification.html
+++ b/teach_diversification.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>长颈鹿美语--教学与教材-多元化教学</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -91,7 +91,7 @@
             </div>
         </div>
     </div>
-    <div class="banner">
+    <div class="banner banner-pic">
         <img src="img/banner11.jpg" alt="">
         <!-- <h3 class="title special-font">多元化教学</h3> -->
     </div>
