20181126--pc网页移动端正常缩放调整

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+    <!-- 为了保持移动端打开pc端网页能正常显示，这段适配代码需要注释掉 -->
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>长颈鹿美语--首页</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -19,81 +20,81 @@
 </head>
 
 <body>
-    <div class="firstPage">
-        <div class="top-container">
-            <div class="bg">
-                <img src="img/head.jpg" alt="">
-            </div>
-            <div class="top-nav">
-                <div class="w1200 nav-bar">
-                    <div class="logo">
-                        <img src="img/logo2.png" alt="">
-                    </div>
-                    <div class="r-nav">
-                        <ul class="web-nav clearfix">
-                            <li class="nav-item item-current">
-                                <a href="index.html" class="item_link">首页</a>
-                                <div class="item-pic">
-                                    <img src="img/animal1.png" alt="">
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a href="about_us.html" class="item_link">关于长颈鹿</a>
-                                <div class="item-pic">
-                                    <img src="img/animal2.png" alt="">
-                                </div>
-                            </li>
-                            <li class="nav-item nav-item-jx">
-                                <a href="teach_textbook.html" class="item_link">教材与教学</a>
-                                <div class="item-pic">
-                                    <img src="img/animal3.png" alt="">
-                                </div>
-                                <div class="menu jx_menu">
-                                    <ul>
-                                        <li class="menu_item jx_item menu_item_cur"><a class="menu_item_link" href="teach_textbook.html">长颈鹿教材</a></li>
-                                        <li class="menu_item jx_item"><a class="menu_item_link" href="teach_feature.html">特色教学法</a></li>
-                                        <li class="menu_item jx_item"><a class="menu_item_link" href="teach_diversification.html">多元化教学</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="nav-item nav-item-kc">
-                                <a href="course_child.html" class="item_link">开设课程</a>
-                                <div class="item-pic">
-                                    <img src="img/animal4.png" alt="">
-                                </div>
-                                <div class="menu kc_menu">
-                                    <ul>
-                                        <li class="menu_item kc_item menu_item_cur"><a class="menu_item_link kc_item_link"
-                                                href="course_child.html">幼儿启蒙英语</a></li>
-                                        <li class="menu_item kc_item"><a class="menu_item_link kc_item_link" href="course_children.html">儿童进阶英语</a></li>
-                                        <li class="menu_item kc_item"><a class="menu_item_link kc_item_link" href="course_juvenile.html">少儿强化英语</a></li>
-                                        <li class="menu_item kc_item"><a class="menu_item_link kc_item_link" href="course_essence.html">菁英少年英语</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a href="news.html" class="item_link">新闻中心</a>
-                                <div class="item-pic">
-                                    <img src="img/animal5.png" alt="">
-                                </div>
-                            </li>
-                            <li class="nav-item nav-item-contact">
-                                <a href="contact_us.html" class="item_link">联系我们</a>
-                                <div class="item-pic">
-                                    <img src="img/animal6.png" alt="">
-                                </div>
-                                <div class="menu contact_menu">
-                                        <ul>
-                                            <li class="menu_item contact_item menu_item_cur"><a class="menu_item_link" href="contact_us.html">联系我们</a></li>
-                                            <li class="menu_item contact_item"><a class="menu_item_link" href="contact_job.html">工作机会</a></li>
-                                        </ul>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+    <div class="top-container">
+        <div class="bg" style="background-image:url('img/head.jpg')">
+            <!-- <img src="img/head.jpg" alt=""> -->
+        </div>
+        <div class="top-nav">
+            <div class="w1200 nav-bar">
+                <div class="logo">
+                    <img src="img/logo2.png" alt="">
+                </div>
+                <div class="r-nav">
+                    <ul class="web-nav clearfix">
+                        <li class="nav-item item-current">
+                            <a href="index.html" class="item_link">首页</a>
+                            <div class="item-pic">
+                                <img src="img/animal1.png" alt="">
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a href="about_us.html" class="item_link">关于长颈鹿</a>
+                            <div class="item-pic">
+                                <img src="img/animal2.png" alt="">
+                            </div>
+                        </li>
+                        <li class="nav-item nav-item-jx">
+                            <a href="teach_textbook.html" class="item_link">教材与教学</a>
+                            <div class="item-pic">
+                                <img src="img/animal3.png" alt="">
+                            </div>
+                            <div class="menu jx_menu">
+                                <ul>
+                                    <li class="menu_item jx_item menu_item_cur"><a class="menu_item_link" href="teach_textbook.html">长颈鹿教材</a></li>
+                                    <li class="menu_item jx_item"><a class="menu_item_link" href="teach_feature.html">特色教学法</a></li>
+                                    <li class="menu_item jx_item"><a class="menu_item_link" href="teach_diversification.html">多元化教学</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="nav-item nav-item-kc">
+                            <a href="course_child.html" class="item_link">开设课程</a>
+                            <div class="item-pic">
+                                <img src="img/animal4.png" alt="">
+                            </div>
+                            <div class="menu kc_menu">
+                                <ul>
+                                    <li class="menu_item kc_item menu_item_cur"><a class="menu_item_link kc_item_link"
+                                            href="course_child.html">幼儿启蒙英语</a></li>
+                                    <li class="menu_item kc_item"><a class="menu_item_link kc_item_link" href="course_children.html">儿童进阶英语</a></li>
+                                    <li class="menu_item kc_item"><a class="menu_item_link kc_item_link" href="course_juvenile.html">少儿强化英语</a></li>
+                                    <li class="menu_item kc_item"><a class="menu_item_link kc_item_link" href="course_essence.html">菁英少年英语</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a href="news.html" class="item_link">新闻中心</a>
+                            <div class="item-pic">
+                                <img src="img/animal5.png" alt="">
+                            </div>
+                        </li>
+                        <li class="nav-item nav-item-contact">
+                            <a href="contact_us.html" class="item_link">联系我们</a>
+                            <div class="item-pic">
+                                <img src="img/animal6.png" alt="">
+                            </div>
+                            <div class="menu contact_menu">
+                                <ul>
+                                    <li class="menu_item contact_item menu_item_cur"><a class="menu_item_link" href="contact_us.html">联系我们</a></li>
+                                    <li class="menu_item contact_item"><a class="menu_item_link" href="contact_job.html">工作机会</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="firstPage">
         <div class="banner bannerSwiper">
             <div class="swiper-container" id="swiper1">
                 <div class="swiper-wrapper">
