--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>长颈鹿美语--新闻中心</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -28,8 +28,8 @@
 
 <body>
     <div class="top-container">
-        <div class="bg">
-            <img src="img/head.jpg" alt="">
+        <div class="bg" style="background-image:url('img/head.jpg')">
+            <!-- <img src="img/head.jpg" alt=""> -->
         </div>
         <div class="top-nav">
             <div class="w1200 nav-bar">
@@ -105,7 +105,7 @@
         <img src="img/banner13.jpg" alt="">
         <!-- <h3 class="title special-font">长颈鹿动态</h3> -->
     </div>
-    <div class="main news_main">
+    <div class="main news_main news_page">
         <div class="w1200 news-container clearfix">
             <div class="news-nav special-font">
                 <h3 class="title">
