--- a/teach_diversification.html
+++ b/teach_diversification.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>长颈鹿美语--教学与教材-多元化教学</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -18,8 +18,8 @@
 
 <body>
     <div class="top-container">
-        <div class="bg">
-            <img src="img/head.jpg" alt="">
+        <div class="bg" style="background-image:url('img/head.jpg')">
+            <!-- <img src="img/head.jpg" alt=""> -->
         </div>
         <div class="top-nav">
             <div class="w1200 nav-bar">
