--- a/about_us.html
+++ b/about_us.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>长颈鹿美语--关于长颈鹿</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/index.css">
+    <!-- <link rel="stylesheet" href="css/index.css"> -->
     <link rel="stylesheet" href="css/about_us.css">
     <link rel="stylesheet" href="css/swiper.min.css">
     <!-- <link rel="stylesheet" href="css/hover-min.css"> -->
@@ -21,8 +21,8 @@
 
 <body>
     <div class="top-container">
-        <div class="bg">
-            <img src="img/head.jpg" alt="">
+        <div class="bg" style="background-image:url('img/head.jpg')">
+            <!-- <img src="img/head.jpg" alt=""> -->
         </div>
         <div class="top-nav">
             <div class="w1200 nav-bar">
